--- a/app/src/main/res/layout/content_play.xml
+++ b/app/src/main/res/layout/content_play.xml
@@ -15,7 +15,7 @@
     <ImageView android:id="@+id/imageView1"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:src="@drawable/Ship"
+        android:src="@drawable/ship"
         android:layout_marginBottom="32dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"></ImageView>
